# RootEngine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/bench/: bench_output.txt  depth_time.csv  match_nnue_vs_hce.csv  match_v3_vs_v2.csv  smp_scaling.csv
nets/: root.nnue
src/: attacks.cpp  attacks.h  bitboard.h  book.cpp  book.h  datagen.cpp  datagen.h  evaluation.cpp  evaluation.h  main.cpp  move.h  movegen.h  movelist.h  nnue.cpp  nnue.h  polyglot_random.h  position.cpp  position.h  search.cpp  search.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h
tools/: match.py  train_nnue.py
